common/force-app/main/default/objects/Account/fields/Mobile_No_spaces__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_spaces__c</fullName>
    <formula>IF(
   BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;+614&quot;),
   SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;),
   IF(
      OR(BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;+61 04&quot;), BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;+6104&quot;)),
      &quot;+61&quot; &amp; MID(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), 5, LEN(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)) - 4),
      IF(
         BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;+61&quot;),
         &quot;+614&quot; &amp; MID(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), 5, LEN(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)) - 4),
         IF(
            BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;6104&quot;),
            &quot;+614&quot; &amp; MID(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), 5, LEN(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)) - 4),
            IF(
               BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;614&quot;),
               &quot;+614&quot; &amp; MID(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), 4, LEN(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)) - 3),
               IF(
                  BEGINS(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), &quot;61&quot;),
                  &quot;+614&quot; &amp; MID(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;), 3, LEN(SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)) - 2),
                  SUBSTITUTE(PersonMobilePhone, &quot; &quot;, &quot;&quot;)
               )
            )
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No spaces</label>
    <type>Text</type>
</CustomField>