common/force-app/main/default/objects/Account/fields/Name_ADMIN_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Name_ADMIN_ONLY__c</fullName>
    <formula>PersonContact.FirstName + &quot; &quot; +  PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name_ADMIN ONLY</label>
    <type>Text</type>
</CustomField>