common/force-app/main/default/objects/Account/fields/New_Fan_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>New_Fan_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox will be TRUE when the account become a new fan</inlineHelpText>
    <label>New Fan Checkbox</label>
    <type>Checkbox</type>
</CustomField>