common/force-app/main/default/objects/Account/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <inlineHelpText>What is your next action to nurture this Business Account?</inlineHelpText>
    <label>Next Action</label>
    <type>TextArea</type>
</CustomField>