common/force-app/main/default/objects/Account/fields/OOU_Sector_Investor_interested_in_del__c.field-meta.xml
<CustomField>
    <fullName>OOU_Sector_Investor_interested_in_del__c</fullName>
    <label>OUT OF USE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>AgTech</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>B2B Software</fullName>
            </value>
            <value>
                <fullName>BioTech</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>CleanTech</fullName>
            </value>
            <value>
                <fullName>ClimateTech</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Decentralised Finance</fullName>
            </value>
            <value>
                <fullName>DeepTech</fullName>
            </value>
            <value>
                <fullName>Digital Health</fullName>
            </value>
            <value>
                <fullName>Digital Marketplaces</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>EdTech</fullName>
            </value>
            <value>
                <fullName>Enterprise Saas</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>ESGs</fullName>
            </value>
            <value>
                <fullName>Financial Funds</fullName>
            </value>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>FoodTech</fullName>
            </value>
            <value>
                <fullName>HealthTech</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>MarTech</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>MedTech</fullName>
            </value>
            <value>
                <fullName>Property Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>