common/force-app/main/default/objects/Account/fields/PA_Email__c.field-meta.xml
<CustomField>
    <fullName>PA_Email__c</fullName>
    <label>PA Email</label>
    <type>Email</type>
</CustomField>