common/force-app/main/default/objects/Account/fields/Platinum_Partner__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platinum Partner</label>
    <type>Checkbox</type>
</CustomField>