common/force-app/main/default/objects/Account/fields/Platinum_Partners_Initial_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Partners_Initial_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is utilized to trigger the process to create platinum partners membership record.</description>
    <inlineHelpText>This field is utilized to trigger the process to create platinum partners membership record.</inlineHelpText>
    <label>Platinum Partners Initial Eligibility</label>
    <type>Checkbox</type>
</CustomField>