common/force-app/main/default/objects/Account/fields/Portal_User_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked if the user has not logged into the portal for over 90 days</inlineHelpText>
    <label>Portal User Inactive</label>
    <type>Checkbox</type>
</CustomField>