common/force-app/main/default/objects/Account/fields/Portfolio_Founder__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Founder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portfolio Founder</label>
    <type>Checkbox</type>
</CustomField>