common/force-app/main/default/objects/Account/fields/Preferred_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Investment_Amount__c</fullName>
    <label>Preferred Investment Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>