common/force-app/main/default/objects/Account/fields/Previous_Actions__c.field-meta.xml
<CustomField>
    <fullName>Previous_Actions__c</fullName>
    <inlineHelpText>This field calculates all previous actions, date and user that created them</inlineHelpText>
    <label>Previous Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>