common/force-app/main/default/objects/Account/fields/Primary_campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the CM nurturing campaign for this account.</inlineHelpText>
    <label>Primary campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>