common/force-app/main/default/objects/Account/fields/primary_email__c.field-meta.xml
<CustomField>
    <fullName>primary_email__c</fullName>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>primary email</label>
    <type>Text</type>
</CustomField>