common/force-app/main/default/objects/Account/fields/Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image__c</fullName>
    <inlineHelpText>The url of the profile image from Gdrive</inlineHelpText>
    <label>Profile Image</label>
    <type>Url</type>
</CustomField>