common/force-app/main/default/objects/Account/fields/Qualified_Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Wholesale__c</fullName>
    <inlineHelpText>A new account on the welcome journey will indicate if they are wholesale or not here</inlineHelpText>
    <label>Qualified Wholesale?</label>
    <type>TextArea</type>
</CustomField>