common/force-app/main/default/objects/Account/fields/Referral_Partners__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partners__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partners</label>
    <referenceTo>Referral_Application__c</referenceTo>
    <relationshipLabel>Referral Partners</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>