common/force-app/main/default/objects/Account/fields/Regular_Marketing_Communications_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Regular_Marketing_Communications_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to hold optin data for preference category Regular Marketing Communications on the preference centre page</description>
    <label>Regular_Marketing_Communications_OptIn</label>
    <type>Checkbox</type>
</CustomField>