common/force-app/main/default/objects/Account/fields/Related_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Related Person Account)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>