common/force-app/main/default/objects/Account/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retail</label>
    <type>Checkbox</type>
</CustomField>