common/force-app/main/default/objects/Account/fields/RFL_Segment__c.field-meta.xml
<CustomField>
    <fullName>RFL_Segment__c</fullName>
    <label>Email Persona (RFL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Magnet</fullName>
            </value>
            <value>
                <fullName>Casual Clicker</fullName>
            </value>
            <value>
                <fullName>New Fan</fullName>
            </value>
            <value>
                <fullName>Waning Loyalists</fullName>
            </value>
            <value>
                <fullName>Unsubscribe Urge</fullName>
            </value>
            <value>
                <fullName>Forgotten Fan</fullName>
            </value>
            <value>
                <fullName>Ghost Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>