common/force-app/main/default/objects/Account/fields/Sector_Investor_interested_in_mp__c.field-meta.xml
<CustomField>
    <fullName>Sector_Investor_interested_in_mp__c</fullName>
    <label>Sector Investor interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectors</valueSetName>
    </valueSet>
</CustomField>