common/force-app/main/default/objects/Account/fields/Sector_mp__c.field-meta.xml
<CustomField>
    <fullName>Sector_mp__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectors</valueSetName>
    </valueSet>
</CustomField>