common/force-app/main/default/objects/Account/fields/Sectors_Invested__c.field-meta.xml
<CustomField>
    <fullName>Sectors_Invested__c</fullName>
    <description>Used to be updated with python based on all investments related to opps</description>
    <label>Sectors_Invested</label>
    <type>TextArea</type>
</CustomField>