common/force-app/main/default/objects/Account/fields/Shareholder_type__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_type__c</fullName>
    <label>Shareholder type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>SMSF</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>