common/force-app/main/default/objects/Account/fields/Shareholder_type_pc__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_type_pc__c</fullName>
    <label>Shareholder type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>