common/force-app/main/default/objects/Account/fields/Staff_1__c.field-meta.xml
<CustomField>
    <fullName>Staff_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>