common/force-app/main/default/objects/Account/fields/Staff_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Email__c</fullName>
    <formula>Staff_1__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff 1 Email</label>
    <type>Text</type>
</CustomField>