common/force-app/main/default/objects/Account/fields/Staff_1_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Role__c</fullName>
    <formula>TEXT(Staff_1__r.Ventures_Persona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff 1 Role</label>
    <type>Text</type>
</CustomField>