common/force-app/main/default/objects/Account/fields/Staff_2__c.field-meta.xml
<CustomField>
    <fullName>Staff_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Staff 2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>