common/force-app/main/default/objects/Account/fields/Staff_3__c.field-meta.xml
<CustomField>
    <fullName>Staff_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Staff 3)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>