common/force-app/main/default/objects/Account/fields/Stage_Property__c.field-meta.xml
<CustomField>
    <fullName>Stage_Property__c</fullName>
    <label>Stage Property BA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Preference Equity Early Stage</fullName>
            </value>
            <value>
                <fullName>Preference Equity Late Stage</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>First Mortgage</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>