common/force-app/main/default/objects/Account/fields/Symphony_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Symphony_User_ID__c</fullName>
    <label>Symphony User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>