common/force-app/main/default/objects/Account/fields/Target_Raise_Stage__c.field-meta.xml
<CustomField>
    <fullName>Target_Raise_Stage__c</fullName>
    <label>Target Raise Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Pre-IPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>