common/force-app/main/default/objects/Account/fields/Tax_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_File_Number__c</fullName>
    <label>Tax File Number</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>