common/force-app/main/default/objects/Account/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>