common/force-app/main/default/objects/Account/fields/TempAccID__c.field-meta.xml
<CustomField>
    <fullName>TempAccID__c</fullName>
    <label>TempAccID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>