common/force-app/main/default/objects/Account/fields/TFN_e__c.field-meta.xml
<CustomField>
    <fullName>TFN_e__c</fullName>
    <label>TFN</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>