common/force-app/main/default/objects/Account/fields/Third_Party_Authorised__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Authorised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Authorised</label>
    <type>Checkbox</type>
</CustomField>