common/force-app/main/default/objects/Account/fields/Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested__c</fullName>
    <inlineHelpText>My Investments Roll Up</inlineHelpText>
    <label>Total Invested</label>
    <summarizedField>Investment__c.Investment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Investment__c.Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>