common/force-app/main/default/objects/Account/fields/Total_Personal_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Personal_Investments__c</fullName>
    <label>Total Personal Investments</label>
    <summaryFilterItems>
        <field>Investment__c.Process_Fund_Disbursement__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investment__c.Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>