common/force-app/main/default/objects/Account/fields/Trust_ABN__c.field-meta.xml
<CustomField>
    <fullName>Trust_ABN__c</fullName>
    <label>Trust ABN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>