common/force-app/main/default/objects/Account/fields/Trust_Account_BSB__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_BSB__c</fullName>
    <label>Trust Account BSB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>