common/force-app/main/default/objects/Account/fields/Trust_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Name__c</fullName>
    <label>Trust Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>