common/force-app/main/default/objects/Account/fields/Trust_name__c.field-meta.xml
<CustomField>
    <fullName>Trust_name__c</fullName>
    <label>Trust name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>