common/force-app/main/default/objects/Account/fields/Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Name__c</fullName>
    <label>Trustee Name</label>
    <type>TextArea</type>
</CustomField>