common/force-app/main/default/objects/Account/fields/Update_test_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Update_test_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update test checkbox</label>
    <type>Checkbox</type>
</CustomField>