common/force-app/main/default/objects/Account/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>utm content</label>
    <length>225</length>
    <type>Text</type>
</CustomField>