common/force-app/main/default/objects/Account/fields/utm_keyword__c.field-meta.xml
<CustomField>
    <fullName>utm_keyword__c</fullName>
    <label>utm keyword</label>
    <length>225</length>
    <type>Text</type>
</CustomField>