common/force-app/main/default/objects/Account/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>utm medium</label>
    <length>225</length>
    <type>Text</type>
</CustomField>