common/force-app/main/default/objects/Account/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>