common/force-app/main/default/objects/Account/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <label>utm_term</label>
    <length>225</length>
    <type>Text</type>
</CustomField>