common/force-app/main/default/objects/Account/fields/Ventures_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Ventures_Company_Name__c</fullName>
    <inlineHelpText>Please complete this field to proceed with creating a company account.</inlineHelpText>
    <label>Ventures Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>