common/force-app/main/default/objects/Account/fields/Ventures_Persona__c.field-meta.xml
<CustomField>
    <fullName>Ventures_Persona__c</fullName>
    <label>Ventures Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Updates Contact</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Venture Capital Fund Manager</fullName>
            </value>
            <value>
                <fullName>Event Coordinator</fullName>
            </value>
            <value>
                <fullName>Referal Partner</fullName>
            </value>
            <value>
                <fullName>Accelerator Partner</fullName>
            </value>
            <value>
                <fullName>Media/Marketing Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>