common/force-app/main/default/objects/Account/fields/Verified_Investor_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_Investor_Name__c</fullName>
    <formula>(IF(GID_Changed_First_Name__c=&quot;&quot;, GreenID_First_Name__c ,GID_Changed_First_Name__c) &amp; IF( GreenID_Middle_Name__c =&quot;&quot;,&quot; &quot;,(&quot; &quot; &amp; GreenID_Middle_Name__c &amp; &quot; &quot;)) &amp; GreenID_Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified Investor Name</label>
    <type>Text</type>
</CustomField>