common/force-app/main/default/objects/Account/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OUT OF USE - Wholesale</label>
    <type>Checkbox</type>
</CustomField>