common/force-app/main/default/objects/Account/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <label>Year Founded</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>