common/force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <label>VC Business Account</label>
</RecordType>