common/force-app/main/default/objects/Account/recordTypes/VCPP_Business_Account.recordType-meta.xml
<RecordType>
    <fullName>VCPP_Business_Account</fullName>
    <active>true</active>
    <description>VC Property Projects</description>
    <label>VCPP Business Account</label>
</RecordType>