common/force-app/main/default/objects/Account/recordTypes/Ventures_Company_Account.recordType-meta.xml
<RecordType>
    <fullName>Ventures_Company_Account</fullName>
    <active>true</active>
    <label>Ventures Company Account</label>
</RecordType>