common/force-app/main/default/objects/Account/validationRules/Cannot_Opt_In_and_Out_for_Emails.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Opt_In_and_Out_for_Emails</fullName>
    <active>true</active>
    <errorConditionFormula>Email_Opt_In__pc =TRUE &amp;&amp; PersonHasOptedOutOfEmail=TRUE</errorConditionFormula>
    <errorMessage>A person cannot be both opted in and out of receiving emails.</errorMessage>
</ValidationRule>