common/force-app/main/default/objects/Account/validationRules/Disable_Investors_to_Update_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Investors_to_Update_Name</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Name),
NOT(ISNEW()),
OR(
($Profile.Id = &apos;00e2v000004cPk4&apos;), ($Profile.Id=&apos;00e2v000004cPk3&apos;)
)
)</errorConditionFormula>
    <errorMessage>To make changes to the name, please call 1300 039 655 or email us at investor@venturecrowd.com.au for assistance. Thank you.</errorMessage>
</ValidationRule>