common/force-app/main/default/objects/Account/validationRules/HIN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>HIN_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(HIN__c)) &amp;&amp; NOT(REGEX(HIN__c, &quot;^[a-zA-Z][0-9]{10}$&quot;))</errorConditionFormula>
    <errorMessage>A HIN starts with a letter and followed by ten numbers, e.g. X0001234567</errorMessage>
</ValidationRule>